Replace how-to image for consultation form and reconfigure form height to ensure navigation buttons are visible for all screen types on initial page load.

--- a/app/makeup-consultation/page.module.css
+++ b/app/makeup-consultation/page.module.css
@@ -8,6 +8,15 @@
     line-height: 1.6;
 }
 
+@media screen and (min-width: 481px) {
+    .formDiv:nth-child(2) > p, 
+    .formDiv:nth-child(6) > p, 
+    .formDiv:nth-child(9) > p {
+        width: 80%;
+        margin-inline: auto;
+    }
+}
+
 @media screen and (orientation: landscape) {
     .main p {
         font-size: 16px;
@@ -20,11 +29,28 @@
     flex-direction: column;
     justify-content: space-between;
     margin-block: 24px 48px;
-    min-height: calc(100vh - 144px);
-    min-height: calc(100dvh - 144px);
+    height: 620px;
     overflow: hidden;
     max-width: 800px;
     margin-inline: auto;
+}
+
+@media screen and (min-width: 481px) {
+    .form {
+        height: 760px;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .form {
+        max-width: 1000px;
+    }
+}
+
+@media screen and (orientation: landscape) {
+    .form {
+        height: 590px;
+    }
 }
 
 .page_counter {
@@ -50,12 +76,19 @@
 @media screen and (orientation: landscape) {
     .formDiv {
         row-gap: 24px;
-        padding-top: 72px;
+        padding-top: 20px;
     }
 }
 
 .formDiv:not(:nth-of-type(6)) {
     position: absolute;
+    height: fit-content;
+}
+
+@media screen and (min-width: 1025px) {
+    .formDiv:not(:nth-of-type(6)) {
+        padding-inline: 100px;
+    }
 }
 
 .formDiv > label {
@@ -90,7 +123,8 @@
 }
 
 .img_container {
-    height: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1;
 }
 
 .img_container_selfie {
@@ -112,9 +146,8 @@
     }
 
     .img_container_selfie {
-        max-width: 500px;
-        max-height: 700px;
-        height: 80%;
+        width: 400px;
+        height: 600px;
         margin-inline: auto;
     }
 }
@@ -131,6 +164,11 @@
     object-fit: cover;
 }
 
+.form label:has(.img_container_selfie) span {
+    margin-inline: auto;
+    margin-bottom: 24px;
+}
+
 @media screen and (max-width: 480px) {
     .img_container img {
         max-height: 375px;
@@ -142,12 +180,23 @@
     .img_container img {
         display: block;
         margin-inline: auto;
-        max-width: 480px;
+        max-width: 500px;
         max-height: 540px;
     }
 }
 
 @media screen and (orientation: landscape) {
+    .formDiv:nth-of-type(6) {
+        display: grid;
+        grid-template-columns: 500px 1fr;
+        row-gap: 48px;
+        width: 1000px;
+    }
+
+    .formDiv:nth-of-type(6) > p:first-child {
+        align-self: end;
+    }
+
     .img_container,
     .img_container_selfie {
         max-width: 500px;
@@ -156,11 +205,13 @@
     }
 
     .img_container {
-        margin-bottom: 24px;
+        grid-column: 1;
+        grid-row: 1 / span 2;
     }
 
     .img_container_selfie {
-        height: 600px;
+        width: 400px;
+        height: 450px;
     }
 
     .img_container img,
@@ -178,11 +229,6 @@
     .formDiv:has(.img_container) p {
         max-width: 500px;
         margin-inline: auto;
-    }
-
-    .form label:has(.img_container_selfie) span {
-        margin-inline: auto;
-        margin-bottom: 24px;
     }
 }
 
@@ -227,9 +273,10 @@
 }
 
 .btnDiv {
-    position: relative;
-    margin-top: auto;
-    margin-inline: auto;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     height: fit-content;
     width: 100%;
     max-width: 500px;
